--- a/EmsApi.Tests/packages.config
+++ b/EmsApi.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.9.8" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net461" />
@@ -54,6 +55,7 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
+  <package id="Titanium.Web.Proxy" version="3.0.8" targetFramework="net461" />
   <package id="xunit" version="2.2.0" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.assert" version="2.2.0" targetFramework="net461" />
